# karelsyrovy.cz

./: .gitignore  README.md  build.sh  nginx.conf
astro/: .gitignore  README.md  astro.config.mjs  package.json  pnpm-lock.yaml
astro/public/: robots.txt
astro/public/static/: ffi-iii-report.html
astro/src/: consts.ts  hash-string.ts
astro/src/components/: BaseHead.astro  EditMeOnGithub.astro  FilenameForCodeblock.astro  Footer.astro  FormattedDate.astro  Header.astro  HeroImage.astro  ViewPathOnGithub.astro
astro/src/content/: config.ts
astro/src/content/blog/2022-11-20-american-fugitive-and-the-mystery-of-c05c/: index.mdx
astro/src/content/blog/2023-03-04-compiling-re3-miami/: index.mdx
astro/src/content/blog/2024-08-24-ffi-php-i/: index.mdx
astro/src/content/blog/2024-08-29-ffi-php-ii/: index.mdx
astro/src/content/blog/2024-09-20-dealing-with-bytes-on-web/: index.mdx
astro/src/content/blog/2024-11-22-ffi-php-iii/: index.mdx
astro/src/layouts/: BlogPost.astro
astro/src/pages/: 404.astro  500.astro  index.astro
astro/src/pages/blog/: [...slug].astro  index.astro
astro/src/styles/: global.css
php-ffi/: .gitignore  README.md  build-php.sh  composer.json  phpunit.xml  run.php
php-ffi/c-lib/: CMakeLists.txt  abi_interop.c  compare-abi.sh  maze_debug.c  maze_generator.c  maze_solver.c  maze_to_string.c  meddle-test.c  meddle-test.cpp  meddle.c  meddle.cpp  random.c  rebuild-install.sh  require_nonnull.h
php-ffi/c-lib/include/: abi_interop.h  maze.h  maze_ffi.h  meddle.h  meddle_ffi.h  random.h  random_ffi.h
php-ffi/c-lib/test/: maze_test.cpp  random_test.cpp  utils.cpp  utils.h
php-ffi/c-lib/test/resources/: maze_100x5.txt  maze_50x50.txt
php-ffi/src/: FFILoader.php
php-ffi/src/FFI/: Maze.php  Random.php
php-ffi/test/: FFIMazeTest.php  FFIRandomTest.php
